-*- mode: text; mode: fold -*-
Changes since 2.2.1
1. src/slsmg.c: Call SLutf8_enable if UTF8 mode has not been setup.

{{{ Previous Versions

Changes since 2.2.0
1. modules/socket-module.c: glibc-2.8 removed the h_addr macro.
2. src/slclass.c: Call clearerr before performing the
   stdio_fread/fwrite functions.
3. src/slstdio.c: typeof in the fputs intrinsic fixed (n instead of dn
   was compared to 0).
4. src/slscanf.c: sscanf will treat NaN and Inf in a case-insensitive
   manner.  Also, the NaN([a-zA-Z0-9]*) form is also supported.
5. src/slang.h: SLclass_set_aelem_init_function was missing from the
   API.
6. src/slmath.c: The expm1 and log1p functions were returning NaN when
   given Inf arguments.
7. src/slmath,c: log1p(-1) produced nan instead of -inf.
8. configure: Added pkg-config support (based upon a debian patch sent
   to me by Luca Bigliardi).
9. doc/tm/rtl/math.tm: Updated the help for set_float_format and added
   documentation for the get_float_format function.
10. autoconf/slangpc.in: Added URL and Libs.private entries to the
    slang.pc pkg-config file.
11. src/slang.h: prototype for SLang_create_array1 missing from slang.h.
12. src/slcurses.c: Added debian patch that adds support for
    additional graphics characters (DIAMOND, DEGREE, etc...).
13. doc/tm/slang.tm: Added a small section about arrays of arrays.
14. src/slang.c: __builtin_expect is used for the stack functions if
    compiled with gcc.
15. src/*.c: A few public variables were not explicitly initialized
    to 0.  Apparantly not doing so causes them not be be exported from
    the windows DLL.

Changes since 2.1.4
1. modules/termios-module.c: Added the VMIN constant (Laurent Perez).
2. src/slbstr.c: Added foreach method to BString_Type objects.
3. module/zlib-module.c: New module that wraps libz
   (compression/decompression library).
4. doc/tm/rtl/: Some documentation updates
5. configure: Added messages about what extra modules will and will
   not be built.